@@ -1,3 +1,6 @@
+2009-10-11 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
+	* Dependency added (gnutls) in v0.6.0-2 
+
 2008-03-20 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
 	* Update to major release 0.6.0
 
